Load the dataset of reviews

--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -56,6 +56,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carregando o Dataset\n",
+    "\n",
+    "Primeiramente vamos carregar os _reviews_:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('dataset/rt-polarity.neg','r')\n",
+    "negative_reviews = list(map(lambda x:x[:-1], f.readlines()))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f = open('dataset/rt-polarity.pos','r')\n",
+    "positive_reviews = list(map(lambda x:x[:-1], f.readlines()))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e juntá-los em um mesmo dataset único chamado `reviews`, bem como seus rótulos em `labels`:\n",
+    "\n",
+    "* 0 == NEGATIVE\n",
+    "* 1 == POSITIVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "labels = [0] * len(negative_reviews) + [1] * len(positive_reviews)\n",
+    "reviews = negative_reviews + positive_reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset contêm 10662 reviews\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dataset contêm {} reviews\".format(len(reviews)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
