Define some helper functions

--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -445,6 +445,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extraindo Features\n",
+    "\n",
+    "Vamos definir algumas funções para facilitar a extração de features.\n",
+    "\n",
+    "Primeiramente, vamos definir a função `build_vocabulary` que retorna um vocabulário contendo todas palavras de `reviews` com frequência maior do que `cutoff`. Além disso, também retorna `feature2index` que será utilizado para encontrar o número do índice de uma dada feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def vocabulary_to_index(vocabulary):\n",
+    "    feature2index = Counter()\n",
+    "    for i, feature in enumerate(vocabulary):\n",
+    "        feature2index[feature] = i\n",
+    "    return feature2index\n",
+    "\n",
+    "def build_vocabulary(reviews, cutoff):\n",
+    "    counter = Counter()\n",
+    "    for content in reviews:\n",
+    "        for feature in extract_features(content):\n",
+    "            counter[feature] += 1\n",
+    "    vocabulary = {}\n",
+    "    for f in counter.keys():\n",
+    "        if counter[f] > cutoff:\n",
+    "            vocabulary[f] = 1\n",
+    "    return (vocabulary.keys(), vocabulary_to_index(vocabulary.keys()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, vamos definir uma função que recebe um vocabulário e um conversor `feature2index` e transforma os _reviews_ em _Bags of Words_:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def build_dataset(reviews, vocabulary, feature2index):\n",
+    "    feature_dataset = np.zeros((len(reviews), len(vocabulary)))\n",
+    "    i = 0\n",
+    "    for content in reviews:\n",
+    "        for f in extract_features(content):\n",
+    "            feature_dataset[i][feature2index[f]] += 1\n",
+    "        i += 1\n",
+    "    return feature_dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
