Implement an artificial neural network to analyse the sentiment of movie's reviews

--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -507,6 +507,275 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementando o Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A seguir definimos uma função que constroi nossa rede neural completamente conectada:\n",
+    "\n",
+    "* Uma camada de entrada de tamanho N = tamanho do vocabulário\n",
+    "* Uma camada oculta com 20 neurônios, com função de ativação ReLu\n",
+    "* Uma camada de saída com 2 neurônios com função de ativação softmax\n",
+    "\n",
+    "Durante o treinamento, será otimizada a função `categorical_crossentropy`, utilizando o algoritmo de otimzação `adam`. A cada iteração será apresentada a acurácia de predição do próprio conjunto de treinamento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def create_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(units=20, input_dim=len(vocabulary)))\n",
+    "    model.add(Activation('relu'))\n",
+    "    model.add(Dense(units=2))\n",
+    "    model.add(Activation('softmax'))\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos o método _5-fold cross-validation_ para avaliar nosso modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os hiper-parâmetros utilizados para o treinamento da rede neural são:\n",
+    "\n",
+    "* batch_size\n",
+    "* epochs - O número de iterações escolhido foi de 10. Acima disso a rede parece iniciar a sofrer de overffiting\n",
+    "* cutoff - A frequência mínima de uma palavra no conjunto de treinamento para que ela entre no vocabulario é de 20. Números menores do que esse melhoram o desempenho da rede neural, mas o tempo de execução aumenta bastante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 1/5\n",
+      "Epoch 1/10\n",
+      "8528/8528 [==============================] - 1s - loss: 0.6693 - acc: 0.5974     \n",
+      "Epoch 2/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.5664 - acc: 0.7329     \n",
+      "Epoch 3/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.4866 - acc: 0.7797     \n",
+      "Epoch 4/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.4377 - acc: 0.8045     \n",
+      "Epoch 5/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.4059 - acc: 0.8180     \n",
+      "Epoch 6/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.3743 - acc: 0.8341     \n",
+      "Epoch 7/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.3498 - acc: 0.8464     \n",
+      "Epoch 8/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.3241 - acc: 0.8610     \n",
+      "Epoch 9/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.3027 - acc: 0.8712     \n",
+      "Epoch 10/10\n",
+      "8528/8528 [==============================] - 0s - loss: 0.2822 - acc: 0.8847     \n",
+      "Evaluating:\n",
+      "1920/2134 [=========================>....] - ETA: 0s - loss: 0.591274200529279 - acc: 0.7305529520907129\n",
+      "******************************************************************\n",
+      "Fold 2/5\n",
+      "Epoch 1/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.6492 - acc: 0.6256     \n",
+      "Epoch 2/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.5452 - acc: 0.7427     \n",
+      "Epoch 3/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4721 - acc: 0.7952     \n",
+      "Epoch 4/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4195 - acc: 0.8171     \n",
+      "Epoch 5/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3746 - acc: 0.8392     \n",
+      "Epoch 6/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3361 - acc: 0.8592     \n",
+      "Epoch 7/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3008 - acc: 0.8803     \n",
+      "Epoch 8/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2717 - acc: 0.8943     \n",
+      "Epoch 9/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2406 - acc: 0.9097     \n",
+      "Epoch 10/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2127 - acc: 0.9249     \n",
+      "Evaluating:\n",
+      "1728/2132 [=======================>......] - ETA: 0s - loss: 0.6197186678256595 - acc: 0.7326454034889393\n",
+      "******************************************************************\n",
+      "Fold 3/5\n",
+      "Epoch 1/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.6985 - acc: 0.5846     \n",
+      "Epoch 2/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.5849 - acc: 0.7281     \n",
+      "Epoch 3/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.5023 - acc: 0.7700     \n",
+      "Epoch 4/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4427 - acc: 0.8026     \n",
+      "Epoch 5/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4012 - acc: 0.8256     \n",
+      "Epoch 6/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3682 - acc: 0.8437     \n",
+      "Epoch 7/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3348 - acc: 0.8585     \n",
+      "Epoch 8/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3083 - acc: 0.8733     \n",
+      "Epoch 9/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2820 - acc: 0.8891     \n",
+      "Epoch 10/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2565 - acc: 0.9018     \n",
+      "Evaluating:\n",
+      "1504/2132 [====================>.........] - ETA: 0s - loss: 0.5875906554552225 - acc: 0.7429643526086217\n",
+      "******************************************************************\n",
+      "Fold 4/5\n",
+      "Epoch 1/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.6823 - acc: 0.6023     \n",
+      "Epoch 2/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.5430 - acc: 0.7453     \n",
+      "Epoch 3/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4751 - acc: 0.7814     \n",
+      "Epoch 4/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4238 - acc: 0.8151     \n",
+      "Epoch 5/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3846 - acc: 0.8376     \n",
+      "Epoch 6/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3514 - acc: 0.8558     \n",
+      "Epoch 7/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3212 - acc: 0.8688     \n",
+      "Epoch 8/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2922 - acc: 0.8841     \n",
+      "Epoch 9/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2677 - acc: 0.8977     \n",
+      "Epoch 10/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2421 - acc: 0.9097     \n",
+      "Evaluating:\n",
+      "2048/2132 [===========================>..] - ETA: 0s - loss: 0.6383344777082189 - acc: 0.7195121950101226\n",
+      "******************************************************************\n",
+      "Fold 5/5\n",
+      "Epoch 1/10\n",
+      "8530/8530 [==============================] - 1s - loss: 0.6893 - acc: 0.5856     \n",
+      "Epoch 2/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.5640 - acc: 0.7345     \n",
+      "Epoch 3/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4806 - acc: 0.7832     \n",
+      "Epoch 4/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.4317 - acc: 0.8070     \n",
+      "Epoch 5/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3971 - acc: 0.8225     \n",
+      "Epoch 6/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3666 - acc: 0.8414     \n",
+      "Epoch 7/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3423 - acc: 0.8547     \n",
+      "Epoch 8/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.3180 - acc: 0.8634     \n",
+      "Epoch 9/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2995 - acc: 0.8764     \n",
+      "Epoch 10/10\n",
+      "8530/8530 [==============================] - 0s - loss: 0.2765 - acc: 0.8879     \n",
+      "Evaluating:\n",
+      "1440/2132 [===================>..........] - ETA: 0s - loss: 0.611046148509514 - acc: 0.7204502815377198\n",
+      "******************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 128\n",
+    "epochs = 10\n",
+    "cutoff = 20\n",
+    "\n",
+    "X = np.array(reviews)\n",
+    "y = np.array(labels)\n",
+    "\n",
+    "kfold = StratifiedKFold(n_splits=5, shuffle=True)\n",
+    "evaluations = []\n",
+    "k = 1\n",
+    "for train_index, test_index in kfold.split(X, y):\n",
+    "    X_train = X[train_index]\n",
+    "    y_train = y[train_index]\n",
+    "    X_test = X[test_index]\n",
+    "    y_test = y[test_index]\n",
+    "    \n",
+    "    vocabulary, feature2index = build_vocabulary(X_train, cutoff)\n",
+    "    X_train = build_dataset(X_train, vocabulary, feature2index)\n",
+    "    y_train = keras.utils.to_categorical(y_train, 2)\n",
+    "    X_test = build_dataset(X_test, vocabulary, feature2index)\n",
+    "    y_test = keras.utils.to_categorical(y_test, 2)\n",
+    "    \n",
+    "    model = create_model()\n",
+    "    print(\"Fold {}/5\".format(k))\n",
+    "    model.fit(X_train, y_train, batch_size=batch_size, verbose=1, epochs=epochs)\n",
+    "    print(\"Evaluating:\")\n",
+    "    result = model.evaluate(X_test, y_test)\n",
+    "    evaluations.append(result[1])\n",
+    "    print(\" - loss: {} - acc: {}\".format(result[0], result[1]))\n",
+    "    print(\"******************************************************************\")\n",
+    "    k += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia média 0.7292250369472233 +/- 0.008643687774824561\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Acurácia média {} +/- {}\".format(np.array(evaluations).mean(), np.array(evaluations).std()))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
