--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -72,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = open('dataset/rt-polarity.neg','r')\n",
@@ -608,123 +610,123 @@
      "text": [
       "Fold 1/5\n",
       "Epoch 1/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.6884 - acc: 0.5903     \n",
+      "8528/8528 [==============================] - 1s - loss: 0.6576 - acc: 0.6038     \n",
       "Epoch 2/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.5506 - acc: 0.7392     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.5416 - acc: 0.7417     \n",
       "Epoch 3/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.4852 - acc: 0.7805     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.4700 - acc: 0.7859     \n",
       "Epoch 4/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.4384 - acc: 0.8043     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.4216 - acc: 0.8153     \n",
       "Epoch 5/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3988 - acc: 0.8247     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3892 - acc: 0.8324     \n",
       "Epoch 6/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3656 - acc: 0.8388     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3626 - acc: 0.8521     \n",
       "Epoch 7/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3310 - acc: 0.8586     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3376 - acc: 0.8601     \n",
       "Epoch 8/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3003 - acc: 0.8763     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3144 - acc: 0.8725     \n",
       "Epoch 9/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.2722 - acc: 0.8919     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.2915 - acc: 0.8857     \n",
       "Epoch 10/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.2437 - acc: 0.9081     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.2727 - acc: 0.8918     \n",
       "Evaluating:\n",
-      "1792/2134 [========================>.....] - ETA: 0s - loss: 0.5960342689105698 - acc: 0.7286785380686123\n",
+      "1792/2134 [========================>.....] - ETA: 0s - loss: 0.5909853301656056 - acc: 0.7389878165308515\n",
       "******************************************************************\n",
       "Fold 2/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.6678 - acc: 0.5982     \n",
+      "8530/8530 [==============================] - 1s - loss: 0.6839 - acc: 0.5885     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5589 - acc: 0.7329     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5668 - acc: 0.7381     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4753 - acc: 0.7825     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4853 - acc: 0.7845     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4239 - acc: 0.8108     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4332 - acc: 0.8115     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3894 - acc: 0.8294     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3935 - acc: 0.8321     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3592 - acc: 0.8451     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3581 - acc: 0.8478     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3317 - acc: 0.8604     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3267 - acc: 0.8634     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3070 - acc: 0.8750     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2952 - acc: 0.8805     \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2814 - acc: 0.8858     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2659 - acc: 0.8979     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2557 - acc: 0.9028     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2381 - acc: 0.9132     \n",
       "Evaluating:\n",
-      "1472/2132 [===================>..........] - ETA: 0s - loss: 0.6472691062691064 - acc: 0.7157598497943628\n",
+      "1600/2132 [=====================>........] - ETA: 0s - loss: 0.640493330320319 - acc: 0.7209193245778611\n",
       "******************************************************************\n",
       "Fold 3/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.6408 - acc: 0.6365     \n",
+      "8530/8530 [==============================] - 1s - loss: 0.6447 - acc: 0.6333     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5262 - acc: 0.7599     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5392 - acc: 0.7538     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4598 - acc: 0.7938     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4782 - acc: 0.7868     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4178 - acc: 0.8212     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4347 - acc: 0.8081     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3867 - acc: 0.8328     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4032 - acc: 0.8246     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3630 - acc: 0.8420     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3738 - acc: 0.8380     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3445 - acc: 0.8551     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3443 - acc: 0.8539     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3183 - acc: 0.8649     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3175 - acc: 0.8660     \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2987 - acc: 0.8776     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2886 - acc: 0.8829     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2807 - acc: 0.8866     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2643 - acc: 0.8939     \n",
       "Evaluating:\n",
-      "1760/2132 [=======================>......] - ETA: 0s - loss: 0.6310924836775151 - acc: 0.7204502814258912\n",
+      "1888/2132 [=========================>....] - ETA: 0s - loss: 0.5946929517427484 - acc: 0.7349906192487892\n",
       "******************************************************************\n",
       "Fold 4/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.7074 - acc: 0.5769     \n",
+      "8530/8530 [==============================] - 1s - loss: 0.6488 - acc: 0.6335     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5847 - acc: 0.7266     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5483 - acc: 0.7479     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5151 - acc: 0.7699     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4815 - acc: 0.7855     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4564 - acc: 0.7979     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4352 - acc: 0.8096     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4088 - acc: 0.8227     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3963 - acc: 0.8302     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3693 - acc: 0.8419     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3639 - acc: 0.8438     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3332 - acc: 0.8574     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3310 - acc: 0.8599     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3004 - acc: 0.8763     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3007 - acc: 0.8749     - ETA: 0s - loss: 0.2877 \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2688 - acc: 0.8959     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2713 - acc: 0.8925     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2427 - acc: 0.9104     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2446 - acc: 0.9070     \n",
       "Evaluating:\n",
-      "1728/2132 [=======================>......] - ETA: 0s - loss: 0.619743770327398 - acc: 0.7246716699054496\n",
+      "1856/2132 [=========================>....] - ETA: 0s - loss: 0.6233098613164662 - acc: 0.7190431520818098\n",
       "******************************************************************\n",
       "Fold 5/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 1s - loss: 0.6669 - acc: 0.6082     \n",
+      "8530/8530 [==============================] - 1s - loss: 0.6552 - acc: 0.6134     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5645 - acc: 0.7363     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5410 - acc: 0.7475     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4800 - acc: 0.7845     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4661 - acc: 0.7923     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4247 - acc: 0.8178     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4183 - acc: 0.8134     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3844 - acc: 0.8348     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3839 - acc: 0.8285     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3516 - acc: 0.8530     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3531 - acc: 0.8461     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3227 - acc: 0.8671     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3251 - acc: 0.8583     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2955 - acc: 0.8775     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2956 - acc: 0.8760     \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2704 - acc: 0.8921     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2714 - acc: 0.8875     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2471 - acc: 0.9048     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2456 - acc: 0.9047     \n",
       "Evaluating:\n",
-      "1504/2132 [====================>.........] - ETA: 0s - loss: 0.625947363828405 - acc: 0.7307692307692307\n",
+      "1824/2132 [========================>.....] - ETA: 0s - loss: 0.6207796188724869 - acc: 0.7284240151212095\n",
       "******************************************************************\n"
      ]
     }
@@ -772,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média 0.7240659139927093 +/- 0.005452360923913648\n"
+      "Acurácia média 0.7284729855121042 +/- 0.007733345602133371\n"
      ]
     }
    ],
