Add html version

--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -8,6 +8,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,7 +16,7 @@
     "\n",
     "O objetivo deste _notebook_ é definir um método capaz de identificar se o sentimento expresso em um dado texto é positivo ou negativo. Utilizaremos _reviews_ de filmes extraídos do site [_Rotten Tomatoes_](https://www.rottentomatoes.com/) e baseados no _dataset_ disponível [neste site](http://www.cs.cornell.edu/people/pabo/movie-review-data/).\n",
     "\n",
-    "Nossa __hipótese__ é que o significado de um texto está diretamente relacionado às palavras que o compõe. Para verificar esta hipóstese podemos analisar a frequência com que certas palavras são utilizadas. Palavras como _good_ e _best_ devem ser mais frequentes em _reviews_ positivos, já palavras como _bad_ e _worst_ devem ser mais utilizadas em _reviews_ negativos. Além de analizar a frequência de cada palavra, podemos verificar a frequência de conjuntos de palavras, já que, embora a expressão _not good_ contenha uma palvras positiva, seu real sentimento é negativo.\n",
+    "Nossa __hipótese__ é que o significado de um texto está diretamente relacionado às palavras que o compõe. Para verificar esta hipótese podemos analisar a frequência com que certas palavras são utilizadas. Palavras como _good_ e _best_ devem ser mais frequentes em _reviews_ positivos, já palavras como _bad_ e _worst_ devem ser mais utilizadas em _reviews_ negativos. Além de analisar a frequência de cada palavra, podemos verificar a frequência de conjuntos de palavras, já que, embora a expressão _not good_ contenha uma palavra positiva, seu real sentimento é negativo.\n",
     "\n",
     "Como consequência, assumiremos que, mesmo sem conhecer a estrutura sintática e/ou semântica de um texto é possível discriminá-lo entre sentimentos positivos e negativos. Mais ainda, assumiremos que nem mesmo a ordem em que as palavras aparecem importa. Esta é uma abordagem bastante utilizada e conhecida como _Bag of Words_ (_unigram_ para modelagens com palavras únicas e _n-gram_ para modelagens com conjuntos de palavras) \\[[1](http://www.iosrjournals.org/iosr-jce/papers/Vol16-issue1/Version-5/F016153438.pdf?id=8590)]\\.\n",
     "\n",
@@ -29,7 +30,7 @@
     "\n",
     "### Modelagem\n",
     "\n",
-    "Os _reviews_ podem ser classificados utilizando diversos modelos probabilisticos como regressão logística, árvores de decisão, random forest, SVM ou redes neurais. Neste _notebook_ decidimos utilizar redes neurais por ser uma técnica que vem apresentando bons resultados em diversas áreas, incluindo processamento de linguagem natural \\[[2](https://www.jair.org/media/4992/live-4992-9623-jair.pdf), [3](https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/11957/12160), [4](https://arxiv.org/pdf/1606.01781.pdf), [5](http://sigport.org/documents/sentiment-analysis-recurrent-neural-network-and-unsupervised-neural-language-model)\\].\n",
+    "Os _reviews_ podem ser classificados utilizando diversos modelos como regressão logística, árvores de decisão, random forest, SVM ou redes neurais. Neste _notebook_ decidimos utilizar redes neurais por ser uma técnica que vem apresentando bons resultados em diversas áreas, incluindo processamento de linguagem natural \\[[2](https://www.jair.org/media/4992/live-4992-9623-jair.pdf), [3](https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/11957/12160), [4](https://arxiv.org/pdf/1606.01781.pdf), [5](http://sigport.org/documents/sentiment-analysis-recurrent-neural-network-and-unsupervised-neural-language-model)\\].\n",
     "\n",
     "Nossa rede neural terá uma camada de entrada, uma camada escondida e uma camada de saída, sendo que:\n",
     "\n",
@@ -140,7 +141,7 @@
    "source": [
     "### Analisando Features\n",
     "\n",
-    "Agora analisar como iremos extrair as _features_ de um texto."
+    "Agora vamos analisar como iremos extrair as _features_ de um texto."
    ]
   },
   {
@@ -459,7 +460,7 @@
     "\n",
     "Vamos definir algumas funções para facilitar a extração de features.\n",
     "\n",
-    "Primeiramente, vamos definir a função `build_vocabulary` que retorna um vocabulário contendo todas palavras de `reviews` com frequência maior do que `cutoff`. Além disso, também retorna `feature2index` que será utilizado para encontrar o número do índice de uma dada feature."
+    "Primeiramente, vamos definir a função `build_vocabulary` que retorna um vocabulário contendo todas as palavras dos `reviews` com frequência maior do que `cutoff`. Além disso, também retorna `feature2index` que será utilizado para encontrar o número do índice de uma dada feature."
    ]
   },
   {
@@ -543,13 +544,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A seguir definimos uma função que constroi nossa rede neural completamente conectada:\n",
+    "A seguir definimos uma função que constrói nossa rede neural completamente conectada:\n",
     "\n",
     "* Uma camada de entrada de tamanho N = tamanho do vocabulário\n",
     "* Uma camada oculta com 20 neurônios, com função de ativação ReLu\n",
     "* Uma camada de saída com 2 neurônios com função de ativação softmax\n",
     "\n",
-    "Durante o treinamento, será otimizada a função `categorical_crossentropy`, utilizando o algoritmo de otimzação `adam`. A cada iteração será apresentada a acurácia de predição do próprio conjunto de treinamento."
+    "Durante o treinamento, será otimizada a função `categorical_crossentropy`, utilizando o algoritmo de otimização `adam`. A cada iteração será apresentada a acurácia de predição do próprio conjunto de treinamento."
    ]
   },
   {
